assignment basic requirements met

--- a/index.html
+++ b/index.html
@@ -8,5 +8,25 @@
         <link rel="stylesheet" href="css/style.css" />
         <title>Document</title>
     </head>
-    <body></body>
+    <body>
+        <div id="spacebar">
+            <header>
+                <h1 id="head">THE MOST INTERACTIVE WEBSITE EVER!</h1>
+            </header>
+            <main>
+                <p id="firstP">Here are some LAME groaner puns!</p>
+                <p>I was wondering why the ball was getting bigger. Then it hit me</p>
+                <p>When life gives you melons, you're dyslexic</p>
+            </main>
+            <div>
+                <ul>
+                    <li>How does Moses make coffee? Hebrews it</li>
+                    <li>What did the janitor say when he jumped out of the closet? SUPPLIES!</li>
+                    <li>How do you throw a space party? You planet</li>
+                    <li>What do you call a super articulate dinosaur? A Thesaurus</li>
+                    <li>Waking up is an eye-opening experience.</li>
+                </ul>
+            </div>
+        </div>
+    </body>
 </html>
