JavaScript Events Complete

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <h1 id="head">THE MOST INTERACTIVE WEBSITE EVER!</h1>
             </header>
             <main>
+                <img id="moving" src="/onaroll.webp" alt="butter on a roll" />
                 <p id="firstP">Here are some LAME groaner puns!</p>
                 <p>I was wondering why the ball was getting bigger. Then it hit me</p>
                 <p>When life gives you melons, you're dyslexic</p>
